# global-continuum-placement

./: .gitignore  .gitlab-ci.yml  README.md  example-output-hello.json  example-output.json  flake.nix  foa_energy_lib.py  global-continuum-placement  lint.sh  lp_pulp.py  main.py  nixpkgs-version.json  pyproject.toml  release.nix  run_test_andrei.sh  setup.cfg  test-platform.json  test-workload.json  test-workload0.json  test.sh  update-nixpkgs.sh
deploy/: k8s-deploy.yaml
examples/: example-app-goerge.json  example-cluster-goerge.json  example-not-native-no-flow.json  example-output-hello-sequence.json  example-output-v1.json  example_app_mono.json  example_app_sequence.json  example_app_service.json  example_clusters_1.json
global_continuum_placement/: app.py  container.py  version.py
global_continuum_placement/application/: auth_service.py  message_bus.py  platform_service.py  schedule_result_publisher.py  scheduler.py  setup.py  unit_of_work.py  util_service.py
global_continuum_placement/application/handlers/: CHANGEME_handlers.py
global_continuum_placement/domain/: base_command.py  base_event.py
global_continuum_placement/domain/CHANGEME_object/: CHANGEME_events.py  CHANGEME_object.py  CHANGEME_repository.py  CHANGEME_values.py
global_continuum_placement/domain/placement/: placement.py
global_continuum_placement/domain/platform/: platfom_values.py  platform.py
global_continuum_placement/domain/scheduling_policies/: exceptions.py  first_fit.py  foa_energy.py
global_continuum_placement/domain/services/: scheduler.py
global_continuum_placement/domain/workload/: workload.py  workload_values.py
global_continuum_placement/infrastructure/api/: setup.py
global_continuum_placement/infrastructure/api/controllers/: scheduler_controller.py  util_controller.py
global_continuum_placement/infrastructure/database/: engine.py  mapper.py  metadata.py  unit_of_work.py
global_continuum_placement/infrastructure/external_apis/: inference_engine.py  orchestrator.py
global_continuum_placement/infrastructure/jwt/: jwt_service.py
nix/: docker.nix  lib.nix
tests/: conftest.py
tests/application/: test_scheduler.py
tests/domain/: test_CHANGEME.py  test_platform.py  test_workflow.py
(+8 files in other folders)
