[tool.poetry]
name = "global-continuum-placement"
version = "0.0.1"
description = ""
authors = ["Physics Project Work Package 2 <wp2@physics-faas.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.5"
dependency-injector = "^4.32"
aiohttp-apispec = "^2.2.1"
logfmt-logger = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"
flake8 = "^3.8.3"
pytest-cov = "^2.10.1"
pytest = "6.1.0"
mypy = "^0.812"

[tool.poetry.scripts]
pgcp = "global_continuum_placement.app:start"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"

## Extra tools configuration
[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
