[tool.poetry]
name = "global_continuum_placement"
version = "0.0.2"
description = ""
authors = ["Physics Project Work Package 2 <wp2@physics-faas.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.5"
dependency-injector = "^4.32"
aiohttp-apispec = "^2.2.1"

[tool.poetry.dev-dependencies]
isort = "^5.5.4"
flake8 = "^6.0"
pytest-cov = "^4.1"
pytest = "^7.4"
mypy = "^1.6"
black = "^23.10"

[tool.poetry.scripts]
global-continuum-placement = "global_continuum_placement.app:start"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"

## Extra tools configuration
[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
